--- a/html/lideranca.html
+++ b/html/lideranca.html
@@ -42,7 +42,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/lideranca_novos_lideres.jpg" alt="Liderança" class="hero-bg-image">
+            <div class="stars"></div>
         </div>
         <div class="container">
             <div class="service-hero-content">
