--- a/html/mapa.html
+++ b/html/mapa.html
@@ -43,7 +43,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/mapa_natal.jpg" alt="Mapa Natal" class="hero-bg-image">
+            <div class="stars"></div>
         </div>
         <div class="container">
             <div class="service-hero-content">
