--- a/html/astrologia.html
+++ b/html/astrologia.html
@@ -31,7 +31,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/astrologia.jpg" alt="Astrologia" class="hero-bg-image">
+            <div class="stars"></div>
         </div>
         <div class="container">
             <div class="service-hero-content">
