--- a/html/dragon.html
+++ b/html/dragon.html
@@ -43,7 +43,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/dragon_coaching.jpg" alt="Dragon Coaching" class="hero-bg-image">
+            <div class="stars"></div>
         </div>
         <div class="container">
             <div class="service-hero-content">
