--- a/html/vocacional.html
+++ b/html/vocacional.html
@@ -43,7 +43,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <img src="../assets/images/analise_vocacional_astrologia.jpg" alt="Análise Vocacional" class="hero-bg-image">
+            <div class="stars"></div>
         </div>
         <div class="container">
             <div class="service-hero-content">
