--- a/html/jornada.html
+++ b/html/jornada.html
@@ -43,7 +43,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <div class="stars"></div>
+            <img src="../assets/images/jogo_maha_lilah.jpg" alt="Jornada da Alma" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
