--- a/html/disc.html
+++ b/html/disc.html
@@ -43,7 +43,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <div class="stars"></div>
+            <img src="../assets/images/disc.jpg" alt="DISC" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
