--- a/html/freshbiz.html
+++ b/html/freshbiz.html
@@ -42,7 +42,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <div class="stars"></div>
+            <img src="../assets/images/freshbiz_game.jpg" alt="FreshBiz Game" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
