--- a/html/mandala.html
+++ b/html/mandala.html
@@ -43,7 +43,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <div class="stars"></div>
+            <img src="../assets/images/mandala_terapeutica_dragonlight.jpg" alt="Mandala Terapêutica" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
