--- a/html/reiki.html
+++ b/html/reiki.html
@@ -42,7 +42,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <div class="stars"></div>
+            <img src="../assets/images/reiki_1.jpg" alt="Reiki" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
