--- a/html/transformacao.html
+++ b/html/transformacao.html
@@ -43,7 +43,7 @@
     <!-- Service Hero -->
     <section class="service-hero">
         <div class="service-hero-background">
-            <div class="stars"></div>
+            <img src="../assets/images/transformacao.jpg" alt="Jogo da Transformação" class="hero-bg-image">
         </div>
         <div class="container">
             <div class="service-hero-content">
